# workflow-graph

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  PERFORMANCE.md  README.md  cliff.toml  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish.yml  release.yml
crates/queue/: Cargo.toml
crates/queue/src/: error.rs  lib.rs  scheduler.rs  traits.rs
crates/queue/src/memory/: artifacts.rs  logs.rs  mod.rs  queue.rs  workers.rs
crates/queue/tests/: integration.rs  performance.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  executor.rs  main.rs  orchestrator.rs  state.rs  workflow_ops.rs
crates/web/: Cargo.toml
crates/web/src/: layout.rs  lib.rs  render.rs  theme.rs
crates/worker-sdk/: Cargo.toml
crates/worker-sdk/src/: executor.rs  lib.rs  main.rs
docs/: astro.config.mjs  guide-postgres.md  guide-redis.md  guide-workers.md  package-lock.json  package.json
docs/public/wasm/: github_graph_web_bg.wasm  workflow_graph_web.js
docs/src/components/: WorkflowDemo.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: rest-api.md  wasm-api.md
docs/src/content/docs/architecture/: deployment-modes.md  overview.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md
docs/src/content/docs/guides/: creating-workers.md  custom-queue.md  embedding.md  postgres-backend.md  redis-backend.md  workflow-definitions.md
docs/src/content/docs/workers/: custom-workers.md  labels-and-outputs.md  overview.md  sdk.md
examples/client-polling/: README.md  index.ts  package-lock.json  package.json
examples/react-app/: App.tsx  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/react-app/src/: App.tsx
examples/vanilla-web/: README.md  index.html  package-lock.json  package.json  vite.config.js
hooks/: pre-commit
scripts/: verify-release-version.sh
shared/: Cargo.toml
shared/src/: lib.rs  yaml.rs
specs/: SPRINT.md
specs/plans/: 001-queue-worker-architecture.md  002-web-component-library.md  003-edge-deployment-split.md
workflows/: ci.yml
www/: index.html  index.js
