[workspace]
members = ["shared", "crates/web", "crates/server", "crates/queue", "crates/worker-sdk", "crates/scheduler"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/auser/workflow-graph"
homepage = "https://auser.github.io/workflow-graph/"
description = "GitHub Actions-style workflow DAG visualizer and job execution engine"

[workspace.dependencies]
workflow-graph-shared = { path = "shared", version = "0.5.0" }
workflow-graph-queue = { path = "crates/queue", version = "0.5.0" }

# Optimize WASM binary size in release builds
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
