[package]
name = "workflow-graph-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and YAML parser for workflow-graph"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
