[package]
name = "workflow-graph-queue"
version.workspace = true
edition = "2024"

[dependencies]
workflow-graph-shared = { path = "../../shared" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
