[package]
name = "workflow-graph-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Queue traits, in-memory backends, and DAG scheduler for workflow-graph"

[dependencies]
workflow-graph-shared.workspace = true
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
