[package]
name = "workflow-graph-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone DAG scheduler for split workflow-graph deployments"

[dependencies]
workflow-graph-queue.workspace = true
workflow-graph-shared.workspace = true
tokio = { version = "1", features = ["full"] }
