[package]
name = "workflow-graph-server"
version = "0.1.0"
edition = "2024"

[dependencies]
workflow-graph-shared = { path = "../../shared" }
workflow-graph-queue = { path = "../queue" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
