[package]
name = "workflow-graph-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embeddable Axum API server for workflow-graph"

[dependencies]
workflow-graph-shared.workspace = true
workflow-graph-queue.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
