[package]
name = "workflow-graph-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM Canvas renderer for interactive workflow DAG visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
workflow-graph-shared.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "TextMetrics",
    "Path2d",
    "MouseEvent",
    "EventTarget",
    "AddEventListenerOptions",
    "DomRect",
    "WheelEvent",
    "KeyboardEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
    "MediaQueryList",
    "PointerEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "DragEvent",
    "DataTransfer",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals"]
