[package]
name = "workflow-graph-worker-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
workflow-graph-shared = { path = "../../shared" }
workflow-graph-queue = { path = "../queue" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
