[package]
name = "workflow-graph-worker-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Worker SDK and binary for executing workflow-graph jobs"

[dependencies]
workflow-graph-shared.workspace = true
workflow-graph-queue.workspace = true
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
